...
    <View style={styles.container}>
      <View style={styles.header}>
        <Text
          variant="headlineMedium"
          style={[styles.title, { color: theme.colors.onBackground }]}
        >
          Nodes
        </Text>
        <Button
          testID="node-import-key-button"
          icon="key-plus"
          mode="text"
          compact
          onPress={() => navigation.navigate('ImportKey')}
        >
          Import Key
        </Button>
      </View>

      <FlatList
        data={nodes}
        keyExtractor={(n) => n.node_id}
...
